<resources>
    <string name="app_name">Quizpert</string>
    <string name="chapter">Chapter</string>
    <string name="attempts">Attempts</string>
    <string name="highscore">HighScore</string>
    <string name="trophy">Trophy</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string-array name="months">

        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>
    <string-array name="mr_unreliable_answers">

        <item>I\'m not sure, it might be </item>
        <item>I\'m a 100% percent sure, that it\'s </item>
        <item>It just might be </item>
        <item>I have no idea, I\'m just going to go with the option </item>
        <item>This question hard as hell man. Try the option </item>
        <item>I\'ve convinced myself that it\'s </item>
        <item>I ain\'t going to get this question right but try </item>
        <item>It\'s definitely </item>
        <item>I believe the answer is </item>
        <item>I can hear the error tone already, try </item>
        <item>This is a tough question, I think it\'s </item>
        <item>To be honest my friend, I don\'t know the answer but try </item>

    </string-array>
    <string-array name="category_scores">

        <item>Science Scores</item>
        <item>Music Scores</item>
        <item>History Scores</item>
        <item>Mathematics Scores</item>
        <item>Arts Scores</item>
        <item>Geography Scores</item>


    </string-array>
    <string-array name="sci_category_attempts">

        <item>sciAttemptsMadeChapter 1</item>
        <item>sciAttemptsMadeChapter 2</item>
        <item>sciAttemptsMadeChapter 3</item>
        <item>sciAttemptsMadeChapter 4</item>
        <item>sciAttemptsMadeChapter 5</item>
        <item>sciAttemptsMadeChapter 6</item>
        <item>sciAttemptsMadeChapter 7</item>
        <item>sciAttemptsMadeChapter 8</item>

    </string-array>
    <string-array name="sci_category_highscore">

        <item>sciHighScoreChapter 1</item>
        <item>sciHighScoreChapter 2</item>
        <item>sciHighScoreChapter 3</item>
        <item>sciHighScoreChapter 4</item>
        <item>sciHighScoreChapter 5</item>
        <item>sciHighScoreChapter 6</item>
        <item>sciHighScoreChapter 7</item>
        <item>sciHighScoreChapter 8</item>

    </string-array>
    <string-array name="sci_category_trophy">

        <item>sciTrophyChapter 1</item>
        <item>sciTrophyChapter 2</item>
        <item>sciTrophyChapter 3</item>
        <item>sciTrophyChapter 4</item>
        <item>sciTrophyChapter 5</item>
        <item>sciTrophyChapter 6</item>
        <item>sciTrophyChapter 7</item>
        <item>sciTrophyChapter 8</item>

    </string-array>
    <string-array name="mus_category_attempts">

        <item>musAttemptsMadeChapter 1</item>
        <item>musAttemptsMadeChapter 2</item>
        <item>musAttemptsMadeChapter 3</item>
        <item>musAttemptsMadeChapter 4</item>
        <item>musAttemptsMadeChapter 5</item>
        <item>musAttemptsMadeChapter 6</item>
        <item>musAttemptsMadeChapter 7</item>
        <item>musAttemptsMadeChapter 8</item>

    </string-array>
    <string-array name="mus_category_highscore">

        <item>musHighScoreChapter 1</item>
        <item>musHighScoreChapter 2</item>
        <item>musHighScoreChapter 3</item>
        <item>musHighScoreChapter 4</item>
        <item>musHighScoreChapter 5</item>
        <item>musHighScoreChapter 6</item>
        <item>musHighScoreChapter 7</item>
        <item>musHighScoreChapter 8</item>

    </string-array>
    <string-array name="mus_category_trophy">

        <item>musTrophyChapter 1</item>
        <item>musTrophyChapter 2</item>
        <item>musTrophyChapter 3</item>
        <item>musTrophyChapter 4</item>
        <item>musTrophyChapter 5</item>
        <item>musTrophyChapter 6</item>
        <item>musTrophyChapter 7</item>
        <item>musTrophyChapter 8</item>

    </string-array>
    <string-array name="his_category_attempts">

        <item>hisAttemptsMadeChapter 1</item>
        <item>hisAttemptsMadeChapter 2</item>
        <item>hisAttemptsMadeChapter 3</item>
        <item>hisAttemptsMadeChapter 4</item>
        <item>hisAttemptsMadeChapter 5</item>
        <item>hisAttemptsMadeChapter 6</item>
        <item>hisAttemptsMadeChapter 7</item>
        <item>hisAttemptsMadeChapter 8</item>

    </string-array>
    <string-array name="his_category_highscore">

        <item>hisHighScoreChapter 1</item>
        <item>hisHighScoreChapter 2</item>
        <item>hisHighScoreChapter 3</item>
        <item>hisHighScoreChapter 4</item>
        <item>hisHighScoreChapter 5</item>
        <item>hisHighScoreChapter 6</item>
        <item>hisHighScoreChapter 7</item>
        <item>hisHighScoreChapter 8</item>

    </string-array>
    <string-array name="his_category_trophy">

        <item>hisTrophyChapter 1</item>
        <item>hisTrophyChapter 2</item>
        <item>hisTrophyChapter 3</item>
        <item>hisTrophyChapter 4</item>
        <item>hisTrophyChapter 5</item>
        <item>hisTrophyChapter 6</item>
        <item>hisTrophyChapter 7</item>
        <item>hisTrophyChapter 8</item>

    </string-array>
    <string-array name="math_category_attempts">

        <item>mathAttemptsMadeChapter 1</item>
        <item>mathAttemptsMadeChapter 2</item>
        <item>mathAttemptsMadeChapter 3</item>
        <item>mathAttemptsMadeChapter 4</item>
        <item>mathAttemptsMadeChapter 5</item>
        <item>mathAttemptsMadeChapter 6</item>
        <item>mathAttemptsMadeChapter 7</item>
        <item>mathAttemptsMadeChapter 8</item>

    </string-array>
    <string-array name="math_category_highscore">

        <item>mathHighScoreChapter 1</item>
        <item>mathHighScoreChapter 2</item>
        <item>mathHighScoreChapter 3</item>
        <item>mathHighScoreChapter 4</item>
        <item>mathHighScoreChapter 5</item>
        <item>mathHighScoreChapter 6</item>
        <item>mathHighScoreChapter 7</item>
        <item>mathHighScoreChapter 8</item>

    </string-array>
    <string-array name="math_category_trophy">

        <item>mathTrophyChapter 1</item>
        <item>mathTrophyChapter 2</item>
        <item>mathTrophyChapter 3</item>
        <item>mathTrophyChapter 4</item>
        <item>mathTrophyChapter 5</item>
        <item>mathTrophyChapter 6</item>
        <item>mathTrophyChapter 7</item>
        <item>mathTrophyChapter 8</item>

    </string-array>
    <string-array name="art_category_attempts">

        <item>artAttemptsMadeChapter 1</item>
        <item>artAttemptsMadeChapter 2</item>
        <item>artAttemptsMadeChapter 3</item>
        <item>artAttemptsMadeChapter 4</item>
        <item>artAttemptsMadeChapter 5</item>
        <item>artAttemptsMadeChapter 6</item>
        <item>artAttemptsMadeChapter 7</item>
        <item>artAttemptsMadeChapter 8</item>

    </string-array>
    <string-array name="art_category_highscore">

        <item>artHighScoreChapter 1</item>
        <item>artHighScoreChapter 2</item>
        <item>artHighScoreChapter 3</item>
        <item>artHighScoreChapter 4</item>
        <item>artHighScoreChapter 5</item>
        <item>artHighScoreChapter 6</item>
        <item>artHighScoreChapter 7</item>
        <item>artHighScoreChapter 8</item>

    </string-array>
    <string-array name="art_category_trophy">

        <item>artTrophyChapter 1</item>
        <item>artTrophyChapter 2</item>
        <item>artTrophyChapter 3</item>
        <item>artTrophyChapter 4</item>
        <item>artTrophyChapter 5</item>
        <item>artTrophyChapter 6</item>
        <item>artTrophyChapter 7</item>
        <item>artTrophyChapter 8</item>

    </string-array>
    <string-array name="geo_category_attempts">

        <item>geoAttemptsMadeChapter 1</item>
        <item>geoAttemptsMadeChapter 2</item>
        <item>geoAttemptsMadeChapter 3</item>
        <item>geoAttemptsMadeChapter 4</item>
        <item>geoAttemptsMadeChapter 5</item>
        <item>geoAttemptsMadeChapter 6</item>
        <item>geoAttemptsMadeChapter 7</item>
        <item>geoAttemptsMadeChapter 8</item>

    </string-array>
    <string-array name="geo_category_highscore">

        <item>geoHighScoreChapter 1</item>
        <item>geoHighScoreChapter 2</item>
        <item>geoHighScoreChapter 3</item>
        <item>geoHighScoreChapter 4</item>
        <item>geoHighScoreChapter 5</item>
        <item>geoHighScoreChapter 6</item>
        <item>geoHighScoreChapter 7</item>
        <item>geoHighScoreChapter 8</item>

    </string-array>
    <string-array name="geo_category_trophy">

        <item>geoTrophyChapter 1</item>
        <item>geoTrophyChapter 2</item>
        <item>geoTrophyChapter 3</item>
        <item>geoTrophyChapter 4</item>
        <item>geoTrophyChapter 5</item>
        <item>geoTrophyChapter 6</item>
        <item>geoTrophyChapter 7</item>
        <item>geoTrophyChapter 8</item>

    </string-array>
    <string name="science">Science</string>
    <string name="music">Music</string>
    <string name="history">History</string>
    <string name="math">Math</string>
    <string name="art">Art</string>
    <string name="geography">Geography</string>
    <string-array name="categories_array">

        <item>@string/science</item>
        <item>@string/music</item>
        <item>@string/history</item>
        <item>@string/math</item>
        <item>@string/art</item>
        <item>@string/geography</item>


    </string-array>
    <string-array name="empty_categories_array">

        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>


    </string-array>
    <string name="space">Space</string>
    <string name="plants">Plants</string>
    <string name="chemistry">Chemistry</string>
    <string name="scientists">Scientists</string>
    <string name="geology">Geology</string>
    <string name="physics">Physics</string>
    <string name="sci_random">Random</string>
    <string name="quantum">Quantum Mechanics</string>
    <string-array name="sci_chapters_name">

        <item>@string/space</item>
        <item>@string/plants</item>
        <item>@string/chemistry</item>
        <item>@string/scientists</item>
        <item>@string/geology</item>
        <item>@string/physics</item>
        <item>@string/sci_random</item>
        <item>@string/quantum</item>

    </string-array>
    <string name="ns">Notes and Scales</string>
    <string name="instruments">Instruments</string>
    <string name="cc">Composers</string>
    <string name="terms">Musical Terms</string>
    <string name="baroque">Baroque Period</string>
    <string name="jazz">Jazz</string>
    <string name="mus_random">Random</string>
    <string name="guess_singer_80s">Guess the Singer/Band</string>
    <string-array name="mus_chapters_name">

        <item>@string/ns</item>
        <item>@string/instruments</item>
        <item>@string/cc</item>
        <item>@string/terms</item>
        <item>@string/baroque</item>
        <item>@string/jazz</item>
        <item>@string/mus_random</item>
        <item>@string/guess_singer_80s</item>

    </string-array>
    <string name="indus">Indus Valley</string>
    <string name="mesopotamia">Ancient Mesopotamia</string>
    <string name="egypt">Ancient Egypt</string>
    <string name="trophy_note">*Trophies are allotted in each quiz chapter, when a player achieves full marks.</string>
    <string name="close">Close</string>
</resources>